--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
  version: "3.0"
 
 loans:
- message: "Welcome to EazyBank loans related production APIs "
+ message: "Welcome to EazyBank loans related prod APIs "
  contactDetails:
   name: "Pelias Sudhir - Product Owner"
   email: "pelias@eazybank.com"
